WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
199400
Crash when adding inline stylesheet to shadow tree in document with null base URL
https://bugs.webkit.org/show_bug.cgi?id=199400
Summary
Crash when adding inline stylesheet to shadow tree in document with null base...
Antti Koivisto
Reported
2019-07-02 04:17:59 PDT
Boom.
Attachments
patch
(3.64 KB, patch)
2019-07-02 04:31 PDT
,
Antti Koivisto
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Antti Koivisto
Comment 1
2019-07-02 04:20:25 PDT
<
rdar://problem/52148063
>
Antti Koivisto
Comment 2
2019-07-02 04:31:20 PDT
Created
attachment 373313
[details]
patch
WebKit Commit Bot
Comment 3
2019-07-02 07:54:57 PDT
Comment on
attachment 373313
[details]
patch Clearing flags on attachment: 373313 Committed
r247050
: <
https://trac.webkit.org/changeset/247050
>
WebKit Commit Bot
Comment 4
2019-07-02 07:54:59 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug