Crash when adding inline stylesheet to shadow tree in document with null base URL https://bugs.webkit.org/show_bug.cgi?id=199400

Reviewed by Zalan Bujtas.

Source/WebCore:

We compute CSSParserContextHash for the inline stylesheet cache but that hits a nullptr crash
if the document happens to have null base URL (which is uncommon but possible).

Test: fast/shadow-dom/stylesheet-in-shadow-without-base-url-crash.html

* css/parser/CSSParserContext.h:
(WebCore::CSSParserContextHash::hash):

Null check the base URL (like other strings), it is a valid case.

LayoutTests:

* fast/shadow-dom/stylesheet-in-shadow-without-base-url-crash-expected.txt: Added.
* fast/shadow-dom/stylesheet-in-shadow-without-base-url-crash.html: Added.


Canonical link: https://commits.webkit.org/213327@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@247050 268f45cc-cd09-0410-ab3c-d52691b4dbfc